--- a/scheduler_ipc/Cargo.tml
+++ b/scheduler_ipc/Cargo.tml
@@ -1,7 +1,7 @@
 [package]
-name = "memory"
+name = "scheduler_ipc"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-linked-list-allocator = "0.9"
+heapless = "0.9"
